Update Italian translation (thanks @Real96!)

--- a/CaptureSight/romfs/i18n/it.json
+++ b/CaptureSight/romfs/i18n/it.json
@@ -45,7 +45,7 @@
     "Hide detail (X)": "Nascondi dettagli (X)",
     "Shiny filter": "Filtro shiny",
     "Flawless IV filter": "Filtro IV perfette",
-    "Star": "Selle",
+    "Star": "Stelle",
     "Square": "Quadrati",
     "Star or square": "Stelle o Quadrati",
     "(A) or (B) to apply filters, (L) and (R) to change filters": "(A) o (B) per applicare i filtri, (L) e (R) per cambiare i filtri",
