Fix Italian attacks

--- a/CaptureSight/romfs/i18n/it.json
+++ b/CaptureSight/romfs/i18n/it.json
@@ -709,162 +709,162 @@
     "Dragon Ascent": "Ascesa del Drago",
     "Hyperspace Fury": "Urtodimensionale",
     "Breakneck Blitz": "Carica Travolgente",
-    "All-Out Pummeling": "Carica Travolgente",
-    "Supersonic Skystrike": "Iperscarica Furiosa",
-    "Acid Downpour": "Iperscarica Furiosa",
-    "Tectonic Rage": "Picchiata Devastante",
-    "Continental Crush": "Picchiata Devastante",
-    "Savage Spin-Out": "Acidiluvio Corrosivo",
-    "Never-Ending Nightmare": "Acidiluvio Corrosivo",
-    "Corkscrew Crash": "Furore della Terra",
-    "Inferno Overdrive": "Furore della Terra",
-    "Hydro Vortex": "Gigamacigno Polverizzante",
-    "Bloom Doom": "Gigamacigno Polverizzante",
-    "Gigavolt Havoc": "Bozzolo Fatale",
-    "Shattered Psyche": "Bozzolo Fatale",
-    "Subzero Slammer": "Abbraccio Spettrale",
-    "Devastating Drake": "Abbraccio Spettrale",
-    "Black Hole Eclipse": "Spirale Perforante",
-    "Twinkle Tackle": "Spirale Perforante",
-    "Catastropika": "Fiammobomba Detonante",
-    "Shore Up": "Fiammobomba Detonante",
-    "First Impression": "Idrovortice Abissale",
-    "Baneful Bunker": "Idrovortice Abissale",
-    "Spirit Shackle": "Floriscoppio Sfolgorante",
-    "Darkest Lariat": "Floriscoppio Sfolgorante",
-    "Sparkling Aria": "Gigascarica Folgorante",
-    "Ice Hammer": "Gigascarica Folgorante",
-    "Floral Healing": "Impatto Psicocinetico",
-    "High Horsepower": "Impatto Psicocinetico",
-    "Strength Sap": "Criodistruzione Polare",
-    "Solar Blade": "Criodistruzione Polare",
-    "Leafage": "Dragoschianto Finale",
-    "Spotlight": "Dragoschianto Finale",
-    "Toxic Thread": "Buco Nero del Non Ritorno",
-    "Laser Focus": "Buco Nero del Non Ritorno",
-    "Gear Up": "Astroimpatto Fatato",
-    "Throat Chop": "Astroimpatto Fatato",
-    "Pollen Puff": "Super Pikaboom",
-    "Anchor Shot": "Sabbiaccumulo",
-    "Psychic Terrain": "Schermaglia",
-    "Lunge": "Fortino",
-    "Fire Lash": "Cucitura d’Ombra",
-    "Power Trip": "Braccioteso",
-    "Burn Up": "Canto Effimero",
-    "Speed Swap": "Martelgelo",
-    "Smart Strike": "Cura Floreale",
-    "Purify": "Forza Equina",
-    "Revelation Dance": "Assorbiforza",
-    "Core Enforcer": "Lama Solare",
-    "Trop Kick": "Fogliame",
-    "Instruct": "Riflettore",
-    "Beak Blast": "Velenotela",
-    "Clanging Scales": "Concentrazione",
-    "Dragon Hammer": "Marciainpiù",
-    "Brutal Swing": "Colpo Infernale",
-    "Aurora Veil": "Sferapolline",
-    "Sinister Arrow Raid": "Colpo d’Ancora",
-    "Malicious Moonsault": "Campo Psichico",
-    "Oceanic Operetta": "Assalto",
-    "Guardian of Alola": "Frusta di Fuoco",
-    "Soul-Stealing 7-Star Strike": "Tracotanza",
-    "Stoked Sparksurfer": "Ultima Fiamma",
-    "Pulverizing Pancake": "Velociscambio",
-    "Extreme Evoboost": "Sottilcorno",
-    "Genesis Supernova": "Purificazione",
-    "Shell Trap": "Mutadanza",
-    "Fleur Cannon": "Nucleocastigo",
-    "Psychic Fangs": "Tropicalcio",
-    "Stomping Tantrum": "Imposizione",
-    "Shadow Bone": "Cannonbecco",
-    "Accelerock": "Clamorsquame",
-    "Liquidation": "Marteldrago",
-    "Prismatic Laser": "Vorticolpo",
-    "Spectral Thief": "Velaurora",
-    "Sunsteel Strike": "Dardoassalto Spettrale",
-    "Moongeist Beam": "Iperschianto delle Tenebre",
-    "Tearful Look": "Sinfonia del Mare",
-    "Zing Zap": "Collera del Guardiano",
-    "Nature’s Madness": "Colpo Eptastellare Rubanima",
-    "Multi-Attack": "Elettrosurf Folgorante",
-    "10,000,000 Volt Thunderbolt": "Adesso Faccio sul Serio",
-    "Mind Blown": "Potenziamento Eevolutivo",
-    "Plasma Fists": "Supernova delle Origini",
-    "Photon Geyser": "Gusciotrappola",
-    "Light That Burns the Sky": "Cannonfiore",
-    "Searing Sunraze Smash": "Psicozanna",
-    "Menacing Moonraze Maelstrom": "Battipiedi",
-    "Let’s Snuggle Forever": "Ossotetro",
-    "Splintered Stormshards": "Rocciarapida",
-    "Clangorous Soulblaze": "Idrobreccia",
-    "Zippy Zap": "Prismalaser",
-    "Splishy Splash": "Ombrafurto",
-    "Floaty Fall": "Astrocarica",
-    "Pika Papow": "Raggio d’Ombra",
-    "Bouncy Bubble": "Occhionilucidi",
-    "Buzzy Buzz": "Elettropizzico",
-    "Sizzly Slide": "Ira della Natura",
-    "Glitzy Glow": "Multiattacco",
-    "Baddy Bad": "Iperfulmine",
-    "Sappy Seed": "Sbalorditesta",
-    "Freezy Frost": "Pugni Plasma",
-    "Sparkly Swirl": "Geyser Fotonico",
-    "Veevee Volley": "Fotodistruzione Apocalittica",
-    "Double Iron Bash": "Supercollisione Solare",
-    "Max Guard": "Deflagrazione Lunare",
-    "Dynamax Cannon": "Dolcesacco di Botte",
-    "Snipe Shot": "Litotempesta Radiale",
-    "Jaw Lock": "Dracofonia Divampante",
-    "Stuff Cheeks": "Sprintaboom",
-    "No Retreat": "Surfasplash",
-    "Tar Shot": "Piombaflap",
-    "Magic Powder": "Pikasaetta",
-    "Dragon Darts": "Bollaslurp",
-    "Teatime": "Elettrozap",
-    "Octolock": "Fiammabam",
-    "Bolt Beak": "Auraswoosh",
-    "Fishious Rend": "Zona Buiabuia",
-    "Court Change": "Bombafrush",
-    "Max Flare": "Scricchiagelo",
-    "Max Flutterby": "Sbrilluccibufera",
-    "Max Lightning": "Eeveempatto",
-    "Max Strike": "Pugni Corazzati",
-    "Max Knuckle": "Dynabarriera",
-    "Max Phantasm": "Cannone Dynamax",
-    "Max Hailstorm": "Tiromirato",
-    "Max Ooze": "Morsostretto",
-    "Max Geyser": "Riempiguance",
-    "Max Airstream": "Spalle al Muro",
-    "Max Starfall": "Colpocatrame",
-    "Max Wyrmwind": "Magipolvere",
-    "Max Mindstorm": "Dragofrecce",
-    "Max Rockfall": "Ora del Tè",
-    "Max Quake": "Tentacolock",
-    "Max Darkness": "Beccoshock",
-    "Max Overgrowth": "Branchiomorso",
-    "Max Steelspike": "Cambiocampo",
-    "Clangorous Soul": "Dynafiammata",
-    "Body Press": "Dynainsetto",
-    "Decorate": "Dynasaetta",
-    "Drum Beating": "Dynattacco",
-    "Snap Trap": "Dynapugno",
-    "Pyro Ball": "Dynavuoto",
-    "Behemoth Blade": "Dynagelo",
-    "Behemoth Bash": "Dynacorrosione",
-    "Aura Wheel": "Dynaflusso",
-    "Breaking Swipe": "Dynajet",
-    "Branch Poke": "Dynafata",
-    "Overdrive": "Dynadragone",
-    "Apple Acid": "Dynapsiche",
-    "Grav Apple": "Dynamacigno",
-    "Spirit Break": "Dynasisma",
-    "Strange Steam": "Dynatenebre",
-    "Life Dew": "Dynaflora",
-    "Obstruct": "Dynametallo",
-    "False Surrender": "Dracofonia",
-    "Meteor Assault": "Schiacciacorpo",
-    "Eternabeam": "Decorazione",
-    "Steel Beam": "Tamburattacco"
+    "All-Out Pummeling": "Iperscarica Furiosa",
+    "Supersonic Skystrike": "Picchiata Devastante",
+    "Acid Downpour": "Acidiluvio Corrosivo",
+    "Tectonic Rage": "Furore della Terra",
+    "Continental Crush": "Gigamacigno Polverizzante",
+    "Savage Spin-Out": "Bozzolo Fatale",
+    "Never-Ending Nightmare": "Abbraccio Spettrale",
+    "Corkscrew Crash": "Spirale Perforante",
+    "Inferno Overdrive": "Fiammobomba Detonante",
+    "Hydro Vortex": "Idrovortice Abissale",
+    "Bloom Doom": "Floriscoppio Sfolgorante",
+    "Gigavolt Havoc": "Gigascarica Folgorante",
+    "Shattered Psyche": "Impatto Psicocinetico",
+    "Subzero Slammer": "Criodistruzione Polare",
+    "Devastating Drake": "Dragoschianto Finale",
+    "Black Hole Eclipse": "Buco Nero del Non Ritorno",
+    "Twinkle Tackle": "Astroimpatto Fatato",
+    "Catastropika": "Super Pikaboom",
+    "Shore Up": "Sabbiaccumulo",
+    "First Impression": "Schermaglia",
+    "Baneful Bunker": "Fortino",
+    "Spirit Shackle": "Cucitura d’Ombra",
+    "Darkest Lariat": "Braccioteso",
+    "Sparkling Aria": "Canto Effimero",
+    "Ice Hammer": "Martelgelo",
+    "Floral Healing": "Cura Floreale",
+    "High Horsepower": "Forza Equina",
+    "Strength Sap": "Assorbiforza",
+    "Solar Blade": "Lama Solare",
+    "Leafage": "Fogliame",
+    "Spotlight": "Riflettore",
+    "Toxic Thread": "Velenotela",
+    "Laser Focus": "Concentrazione",
+    "Gear Up": "Marciainpiù",
+    "Throat Chop": "Colpo Infernale",
+    "Pollen Puff": "Sferapolline",
+    "Anchor Shot": "Colpo d’Ancora",
+    "Psychic Terrain": "Campo Psichico",
+    "Lunge": "Assalto",
+    "Fire Lash": "Frusta di Fuoco",
+    "Power Trip": "Tracotanza",
+    "Burn Up": "Ultima Fiamma",
+    "Speed Swap": "Velociscambio",
+    "Smart Strike": "Sottilcorno",
+    "Purify": "Purificazione",
+    "Revelation Dance": "Mutadanza",
+    "Core Enforcer": "Nucleocastigo",
+    "Trop Kick": "Tropicalcio",
+    "Instruct": "Imposizione",
+    "Beak Blast": "Cannonbecco",
+    "Clanging Scales": "Clamorsquame",
+    "Dragon Hammer": "Marteldrago",
+    "Brutal Swing": "Vorticolpo",
+    "Aurora Veil": "Velaurora",
+    "Sinister Arrow Raid": "Dardoassalto Spettrale",
+    "Malicious Moonsault": "Iperschianto delle Tenebre",
+    "Oceanic Operetta": "Sinfonia del Mare",
+    "Guardian of Alola": "Collera del Guardiano",
+    "Soul-Stealing 7-Star Strike": "Colpo Eptastellare Rubanima",
+    "Stoked Sparksurfer": "Elettrosurf Folgorante",
+    "Pulverizing Pancake": "Adesso Faccio sul Serio",
+    "Extreme Evoboost": "Potenziamento Eevolutivo",
+    "Genesis Supernova": "Supernova delle Origini",
+    "Shell Trap": "Gusciotrappola",
+    "Fleur Cannon": "Cannonfiore",
+    "Psychic Fangs": "Psicozanna",
+    "Stomping Tantrum": "Battipiedi",
+    "Shadow Bone": "Ossotetro",
+    "Accelerock": "Rocciarapida",
+    "Liquidation": "Idrobreccia",
+    "Prismatic Laser": "Prismalaser",
+    "Spectral Thief": "Ombrafurto",
+    "Sunsteel Strike": "Astrocarica",
+    "Moongeist Beam": "Raggio d’Ombra",
+    "Tearful Look": "Occhionilucidi",
+    "Zing Zap": "Elettropizzico",
+    "Nature’s Madness": "Ira della Natura",
+    "Multi-Attack": "Multiattacco",
+    "10,000,000 Volt Thunderbolt": "Iperfulmine",
+    "Mind Blown": "Sbalorditesta",
+    "Plasma Fists": "Pugni Plasma",
+    "Photon Geyser": "Geyser Fotonico",
+    "Light That Burns the Sky": "Fotodistruzione Apocalittica",
+    "Searing Sunraze Smash": "Supercollisione Solare",
+    "Menacing Moonraze Maelstrom": "Deflagrazione Lunare",
+    "Let’s Snuggle Forever": "Dolcesacco di Botte",
+    "Splintered Stormshards": "Litotempesta Radiale",
+    "Clangorous Soulblaze": "Dracofonia Divampante",
+    "Zippy Zap": "Sprintaboom",
+    "Splishy Splash": "Surfasplash",
+    "Floaty Fall": "Piombaflap",
+    "Pika Papow": "Pikasaetta",
+    "Bouncy Bubble": "Bollaslurp",
+    "Buzzy Buzz": "Elettrozap",
+    "Sizzly Slide": "Fiammabam",
+    "Glitzy Glow": "Auraswoosh",
+    "Baddy Bad": "Zona Buiabuia",
+    "Sappy Seed": "Bombafrush",
+    "Freezy Frost": "Scricchiagelo",
+    "Sparkly Swirl": "Sbrilluccibufera",
+    "Veevee Volley": "Eeveempatto",
+    "Double Iron Bash": "Pugni Corazzati",
+    "Max Guard": "Dynabarriera",
+    "Dynamax Cannon": "Cannone Dynamax",
+    "Snipe Shot": "Tiromirato",
+    "Jaw Lock": "Morsostretto",
+    "Stuff Cheeks": "Riempiguance",
+    "No Retreat": "Spalle al Muro",
+    "Tar Shot": "Colpocatrame",
+    "Magic Powder": "Magipolvere",
+    "Dragon Darts": "Dragofrecce",
+    "Teatime": "Ora del Tè",
+    "Octolock": "Tentacolock",
+    "Bolt Beak": "Beccoshock",
+    "Fishious Rend": "Branchiomorso",
+    "Court Change": "Cambiocampo",
+    "Max Flare": "Dynafiammata",
+    "Max Flutterby": "Dynainsetto",
+    "Max Lightning": "Dynasaetta",
+    "Max Strike": "Dynattacco",
+    "Max Knuckle": "Dynapugno",
+    "Max Phantasm": "Dynavuoto",
+    "Max Hailstorm": "Dynagelo",
+    "Max Ooze": "Dynacorrosione",
+    "Max Geyser": "Dynaflusso",
+    "Max Airstream": "Dynajet",
+    "Max Starfall": "Dynafata",
+    "Max Wyrmwind": "Dynadragone",
+    "Max Mindstorm": "Dynapsiche",
+    "Max Rockfall": "Dynamacigno",
+    "Max Quake": "Dynasisma",
+    "Max Darkness": "Dynatenebre",
+    "Max Overgrowth": "Dynaflora",
+    "Max Steelspike": "Dynametallo",
+    "Clangorous Soul": "Dracofonia",
+    "Body Press": "Schiacciacorpo",
+    "Decorate": "Decorazione",
+    "Drum Beating": "Tamburattacco",
+    "Snap Trap": "Tagliola",
+    "Pyro Ball": "Palla Infuocata",
+    "Behemoth Blade": "Taglio Maestoso",
+    "Behemoth Bash": "Colpo Maestoso",
+    "Aura Wheel": "Ruota d’Aura",
+    "Breaking Swipe": "Vastoimpatto",
+    "Branch Poke": "Ramostoccata",
+    "Overdrive": "Overdrive",
+    "Apple Acid": "Acido Malico",
+    "Grav Apple": "Forza G",
+    "Spirit Break": "Frantumanima",
+    "Strange Steam": "Vapore Incantato",
+    "Life Dew": "Goccia Vitale",
+    "Obstruct": "Sbarramento",
+    "False Surrender": "Supplicolpo",
+    "Meteor Assault": "Sfolgorassalto",
+    "Eternabeam": "Raggio Infinito",
+    "Steel Beam": "Raggio d’Acciaio"
   },
   "abilities": {
     "—": "-",
