Fix translation key

--- a/CaptureSight/romfs/i18n/de.json
+++ b/CaptureSight/romfs/i18n/de.json
@@ -61,7 +61,7 @@
     "None": "Nichts",
     "Regular Den": "Normales Nest",
     "Rare Den": "Seltenes Nest",
-    "Den id filter": "Nest-ID-Filter",
+    "Den Id filter": "Nest-ID-Filter",
     "Spawn filter": "Begegnungs-Filter",
     "Ability Filter": "Fähigkeiten-Filter",
     "Any": "Jede Fähigkeit"
