--- a/CaptureSight/romfs/i18n/fr.json
+++ b/CaptureSight/romfs/i18n/fr.json
@@ -61,7 +61,7 @@
     "None": "Aucun",
     "Regular Den": "Antre Normal",
     "Rare Den": "Antre Rare",
-    "Den id filter": "Filtrer par numéro d'Antre",
+    "Den Id filter": "Filtrer par numéro d'Antre",
     "Spawn filter": "Filtrer par Pokémon",
     "Ability Filter": "Filtrer par capacité spéciale",
     "Any": "Peu importe"
