--- a/CaptureSight-Applet/romfs/i18n/fr.json
+++ b/CaptureSight-Applet/romfs/i18n/fr.json
@@ -8,8 +8,8 @@
     "Not Shiny": "Non Shiny",
     "Nature": "Nature",
     "Wild Pokemon": "Pokémon Sauvage",
-    "Box Pokemon": "Boîtes PCA",
-    "Party Pokemon": "Party Pokemon",
+    "Box Pokemon": "Boîtes PC",
+    "Party Pokemon": "Equipe Pokemon",
     "Raid Pokemon": "Raid Pokemon",
     "Box": "Boîte",
     "Slot": "Emplacement",
@@ -22,7 +22,7 @@
     "Den Id": "ID de l'Antre",
     "Wild and Trade Pokemon": "Pokémon sauvage et échangé",
     "Trade Pokemon": "Pokemon à l'échange",
-    "Minted Nature": "Aromate Nature",
+    "Minted Nature": "Nature avec Aromate",
     "IVs": "IVs",
     "EVs": "EVs",
     "Atmosphere's dmnt:cht is not running": "dmnt:chts de Atmosphère n'est pas en cours d'exécution",
@@ -35,12 +35,12 @@
     "Ability": "Talent",
     "Empty": "Vide",
     "Event": "Evénement",
-    "HP": "HP",
+    "HP": "PV",
     "ATK": "ATK",
     "DEF": "DEF",
-    "SPA": "SPA",
-    "SPD": "SPD",
-    "SPE": "SPE",
+    "SPA": "SPE ATK",
+    "SPD": "SPE DEF",
+    "SPE": "VIT",
     "Switch (A)": "Changer (A)",
     "Hide detail (X)": "Cacher les détails (X)",
     "Shiny filter": "Filtre Shiny",
@@ -54,7 +54,7 @@
     "Calculating seed": "Calculer la Seed",
     "Raid Search Settings": "Paramètres de recherche de Raid",
     "View upcoming advances (A), View type matches (Y)": "Voir les prochaines frames (A), Voir l'efficacité des types (Y)",
-    "View details (A), View type matches (Y)": "Voir les détails, Voir l'efficacité des types (Y)",
+    "View details (A), View type matches (Y)": "Voir les détails (A), Voir l'efficacité des types (Y)",
     "Weaknesses": "Faiblesses",
     "Resistances": "Résistances",
     "No Filter": "Pas de Filtre",
@@ -2029,7 +2029,7 @@
     "Eternatus": "Éthernatos"
   },
   "types": {
-    "None": "None",
+    "None": "Aucun",
     "Normal": "Normal",
     "Fighting": "Combat",
     "Flying": "Vol",
