Update fr.json (#51)

--- a/CaptureSight-Applet/romfs/i18n/fr.json
+++ b/CaptureSight-Applet/romfs/i18n/fr.json
@@ -1,70 +1,53 @@
 {
   "app": {
-    "PSV": "PSV",
-    "TSV": "TSV",
-    "PID": "PID",
-    "EC": "EC",
-    "Shiny": "Shiny",
-    "Not Shiny": "Non Shiny",
-    "Nature": "Nature",
-    "Wild Pokemon": "Pokémon Sauvage",
-    "Box Pokemon": "Boîtes PCA",
-    "Party Pokemon": "Party Pokemon",
-    "Raid Pokemon": "Raid Pokemon",
-    "Box": "Boîte",
-    "Slot": "Emplacement",
-    "Party": "Equipe",
-    "Active Den List": "Liste des Antres actifs",
-    "All Dens List": "Liste de tous les antres",
-    "Stars": "Étoiles",
-    "More detail (X)": "Plus d'informations (X)",
-    "Raid Searcher (Y)": "Recherche de Raid (Y)",
-    "Den Id": "ID de l'Antre",
-    "Wild and Trade Pokemon": "Pokémon sauvage et échangé",
-    "Trade Pokemon": "Pokemon à l'échange",
-    "Minted Nature": "Aromate Nature",
-    "IVs": "IVs",
+    "Active dens": "Antres actifs",
+    "Advances to next shiny": "Nombre d'avancements pour le prochain Shiny",
+    "All dens": "Tous les antres",
+    "Continue": "Continuer",
     "EVs": "EVs",
-    "Atmosphere's dmnt:cht is not running": "dmnt:chts de Atmosphère n'est pas en cours d'exécution",
-    "Please start a Pokemon game before running CaptureSight": "Veuillez démarrer un jeu Pokemon avant d'exécuter CaptureSight",
-    "Friendship": "Bonheur",
-    "Egg cycles": "Nombre de cycles",
-    "Frame": "Frame",
-    "No raid seed found!  This may not be a raid Pokemon": "Aucune Raid Seed n'a été trouvée ! Ce n'est peut-être pas un Pokemon de Raid",
-    "Flawless IVs": "IVs Parfaits",
-    "Ability": "Talent",
-    "Empty": "Vide",
-    "Event": "Evénement",
-    "HP": "HP",
-    "ATK": "ATK",
-    "DEF": "DEF",
-    "SPA": "SPA",
-    "SPD": "SPD",
-    "SPE": "SPE",
-    "Switch (A)": "Changer (A)",
-    "Hide detail (X)": "Cacher les détails (X)",
-    "Shiny filter": "Filtre Shiny",
-    "Flawless IV filter": "Filtre IVs Parfaits",
-    "Star": "Etoile",
-    "Square": "Carré",
-    "Star or square": "Étoile ou Carré",
-    "(A) or (B) to apply filters, (L) and (R) to change filters": "(A) ou (B) pour appliquer les filtres, (L) et (R) pour changer les filtres",
-    "(A) to apply filters": "(A) pour appliquer les filtres",
-    "Advance": "Avancer",
-    "Calculating seed": "Calculer la Seed",
-    "Raid Search Settings": "Paramètres de recherche de Raid",
-    "View upcoming advances (A), View type matches (Y)": "Voir les prochaines frames (A), Voir l'efficacité des types (Y)",
-    "View details (A), View type matches (Y)": "Voir les détails, Voir l'efficacité des types (Y)",
+    "Find raid seed": "Trouver la seed du raid",
+    "Misc": "Autres",
+    "Move 1": "Attaque 1",
+    "Move 2": "Attaque 2",
+    "Move 3": "Attaque 3",
+    "Move 4": "Attaque 4",
+    "Moves": "Attaques",
+    "Multiplier": "Multiplicateur",
+    "Note: This will take a lot of time and cannot be used on shiny or event Pokemon.  The console will appear frozen while searching (this will be fixed in the future).": "Note : Cela va prendre beaucoup de temps et ne peut être utilisé pour les Shiny ou les events. La console sera comme bloquée (ceci sera fixé dans le futur)",
+    "Raid": "Raid",
+    "Raid Seed": "Raid Seed",
+    "Press A to view raid seed": "Appuyer sur A pour voir la seed du Raid",
+    "Seed found": "Seed trouvée",
+    "Shiny type": "Type de Shiny",
+    "Trade": "Échange",
     "Weaknesses": "Faiblesses",
-    "Resistances": "Résistances",
-    "No Filter": "Pas de Filtre",
-    "None": "Aucun",
-    "Regular Den": "Antre Normal",
-    "Rare Den": "Antre Rare",
-    "Den Id filter": "Filtrer par numéro d'Antre",
-    "Spawn filter": "Filtrer par Pokémon",
-    "Ability Filter": "Filtrer par capacité spéciale",
-    "Any": "Peu importe"
+    "Weakness": "Résistances",
+    "Wild": "Sauvage",
+    "Egg cycles": "Cycles d'éclosion",
+    "OT Gender": "Sexe du DO",
+    "Male": "Mâle",
+    "Female": "Femelle",
+    "Misc Pokemon": "Autres Pokémon",
+    "Party Pokemon": "Équipe Pokémon",
+    "Box Pokemon": "Pokémon dans le PC",
+    "Party": "Équipe",
+    "Shiny": "Shiny",
+    "Star": "Étoile",
+    "Square": "Carré",
+    "Event": "Événement",
+    "Nature": "Nature",
+    "Minted Nature": "Nature aromatisée",
+    "Ability": "Talent",
+    "Friendship": "Bonheur",
+    "EC": "EC",
+    "PID": "PID",
+    "IVs": "IVs",
+    "HP": "PV",
+    "ATK": "ATQ",
+    "DEF": "DEF",
+    "SPA": "ATQ SPÉ",
+    "SPD": "DEF SPÉ",
+    "SPE": "VIT"
   },
   "natures": {
     "Hardy": "Hardi",
@@ -2029,7 +2012,7 @@
     "Eternatus": "Éthernatos"
   },
   "types": {
-    "None": "None",
+    "None": "Aucun",
     "Normal": "Normal",
     "Fighting": "Combat",
     "Flying": "Vol",
