Update Italian translations (Thanks @Real96!)

--- a/CaptureSight-Applet/romfs/i18n/it.json
+++ b/CaptureSight-Applet/romfs/i18n/it.json
@@ -1,69 +1,54 @@
 {
   "app": {
-    "PSV": "PSV",
-    "TSV": "TSV",
-    "PID": "PID",
-    "EC": "EC",
-    "Shiny": "Shiny",
-    "Not Shiny": "Non Shiny",
-    "Nature": "Natura",
-    "Wild Pokemon": "Pokemon Selvatico",
-    "Box Pokemon": "Pokemon nel Box",
-    "Party Pokemon": "Pokemon in Squadra",
-    "Raid Pokemon": "Pokemon del Raid",
-    "Box": "Box",
-    "Slot": "Posizione",
-    "Party": "Squadra",
-    "Active Den List": "Lista dei Den attivi",
-    "All Dens List": "Lista di tutti i Den",
-    "Stars": "Stelle",
-    "More detail (X)": "Più Dettagli (X)",
-    "Raid Searcher (Y)": "Ricerca Raid (Y)",
-    "Den Id": "Id del Den",
-    "Wild and Trade Pokemon": "Pokemon Selvatico e in Scambio",
-    "Trade Pokemon": "Pokemon in Scambio",
-    "Minted Nature": "Natura modificata",
-    "IVs": "IVs",
+    "Active dens": "Tane attive",
+    "Advances to next shiny": "Avanzamenti per il prossimo cromatico",
+    "All dens": "Tutte le tane",
+    "Continue": "Continua",
     "EVs": "EVs",
-    "Atmosphere's dmnt:cht is not running": "dmnt:cht di Atmosphere non è in uso",
-    "Please start a Pokemon game before running CaptureSight": "Per favore, avvia un gioco Pokemon prima di usare CaptureSight",
-    "Friendship": "Amicizia",
-    "Egg cycles": "Cicli Uovo",
-    "No raid seed found!  This may not be a raid Pokemon": "Nessun seed di un raid trovato!  Questo potrebbe non essere un Pokemon di un raid",
-    "Flawless IVs": "IVs perfette",
-    "Ability": "Abilità",
-    "Empty": "Vuoto",
+    "Find raid seed": "Trova il Seed del Raid",
+    "Misc": "Generale",
+    "Move 1": "Mossa 1",
+    "Move 2": "Mossa 2",
+    "Move 3": "Mossa 3",
+    "Move 4": "Mossa 4",
+    "Moves": "Mosse",
+    "Multiplier": "Moltiplicatore",
+    "Note: This will take a lot of time and cannot be used on shiny or event Pokemon.  The console will appear frozen while searching (this will be fixed in the future).": "Nota: Questo impiegherà molto tempo e non potrà essere usato per la cromaticità o per i Pokemon evento. La console sembrerà bloccata durante la ricerca (questo sarà sistemato in futuro)",
+    "Raid": "Raid",
+    "Raid Seed": "Seed del Raid",
+    "Press A to view raid seed": "Premi A per vedere il seed del raid",
+    "Seed found": "Seed trovato",
+    "Shiny type": "Tipo di cromaticità",
+    "Trade": "Scambio",
+    "Weaknesses": "Debolezze",
+    "Weakness": "Debolezza",
+    "Wild": "Selvatico",
+    "Egg cycles": "Cicli uovo",
+    "OT Gender": "Sesso dell'AO",
+    "Male": "Maschio",
+    "Female": "Femmina",
+    "Genderless": "Sconosciuto",
+    "Misc Pokemon": "Pokemon Generale",
+    "Party Pokemon": "Pokemon in squadra",
+    "Box Pokemon": "Pokemon nei box",
+    "Party": "Squadra",
+    "Shiny": "Cromatico",
+    "Star": "Stella",
+    "Square": "Quadrato",
     "Event": "Evento",
+    "Nature": "Natura",
+    "Minted Nature": "Natura modificata (Menta)",
+    "Ability": "Abilità",
+    "Friendship": "Amicizia",
+    "EC": "EC",
+    "PID": "PID",
+    "IVs": "IVs",
     "HP": "HP",
     "ATK": "ATK",
     "DEF": "DEF",
     "SPA": "SPA",
     "SPD": "SPD",
-    "SPE": "SPE",
-    "Switch (A)": "Cambia (A)",
-    "Hide detail (X)": "Nascondi dettagli (X)",
-    "Shiny filter": "Filtro shiny",
-    "Flawless IV filter": "Filtro IV perfette",
-    "Star": "Stelle",
-    "Square": "Quadrati",
-    "Star or square": "Stelle o Quadrati",
-    "(A) or (B) to apply filters, (L) and (R) to change filters": "(A) o (B) per applicare i filtri, (L) e (R) per cambiare i filtri",
-    "(A) to apply filters": "(A) per applicare i filtri",
-    "Advance": "Avanza",
-    "Calculating seed": "Calcolo del Seed in corso",
-    "Raid Search Settings": "Impostazioni di ricerca del Raid",
-    "View upcoming advances (A), View type matches (Y)": "Vedi i prossimi avanzamenti (A), Vedi debolezze/resistenze (Y)",
-    "View details (A), View type matches (Y)": "Vedi dettagli (A), Vedi debolezze/resistenze (Y)",
-    "Weaknesses": "Debolezze",
-    "Resistances": "Resistenze",
-    "No filter": "Nessun filtro",
-    "None": "Nessuno",
-    "Regular Den": "Den regolare",
-    "Rare Den": "Den raro",
-    "Den Id filter": "Filtro Den id",
-    "Spawn filter": "Filtro incontro",
-    "Ability Filter": "Filtro abilità",
-    "Any": "Qualsiasi"
+    "SPE": "SPE"
   },
   "natures": {
     "Hardy": "Ardita",
