Remove outdated translations

--- a/CaptureSight-Applet/romfs/i18n/chs.json
+++ b/CaptureSight-Applet/romfs/i18n/chs.json
@@ -1,60 +1,5 @@
 {
-  "app": {
-    "PSV": "PSV",
-    "TSV": "TSV",
-    "PID": "PID",
-    "EC": "加密常数",
-    "Shiny": "异色",
-    "Not Shiny": "非异色",
-    "Nature": "性格",
-    "Wild Pokemon": "野生宝可梦",
-    "Box Pokemon": "盒子宝可梦",
-    "Party Pokemon": "同行宝可梦",
-    "Raid Pokemon": "团体战宝可梦",
-    "Box": "盒子",
-    "Slot": "位置",
-    "Party": "同行",
-    "Active Den List": "有光柱坑列表",
-    "All Dens List": "全坑列表",
-    "Stars": "星数",
-    "More detail (X)": "更多信息 (按X)",
-    "Raid Searcher (Y)": "查看seed (按Y)",
-    "Den Id": "坑ID",
-    "Wild and Trade Pokemon": "野生与在交换的宝可梦",
-    "Trade Pokemon": "交换中的宝可梦",
-    "Minted Nature": "薄荷性格",
-    "IVs": "个体值",
-    "EVs": "努力值",
-    "Atmosphere's dmnt:cht is not running": "大气层 dmnt:chts 未在运行",
-    "Please start a Pokemon game before running CaptureSight": "请在运行CaptureSight前打开游戏",
-    "Friendship": "亲密度",
-    "Egg cycles": "孵化圈数",
-    "Frame": "帧",
-    "No raid seed found!  This may not be a raid Pokemon": "没有找到乱数seed! 该宝可梦可能不是来自团体战",
-    "Flawless IVs": "完美个体",
-    "View upcoming frames (A)": "查看后续帧 (按A)",
-    "Ability": "特性",
-    "Empty": "无",
-    "Event": "活动",
-    "HP": "HP",
-    "ATK": "攻击",
-    "DEF": "防御",
-    "SPA": "特攻",
-    "SPD": "特防",
-    "SPE": "速度",
-    "Switch (A)": "切换(A)",
-    "Hide detail (X)": "隐藏详细(X)",
-    "Shiny filter": "筛选异色",
-    "Flawless IV filter": "筛选完美个体",
-    "Star": "星星",
-    "Square": "方块",
-    "Star or square": "星或方块",
-    "(A) or (B) to apply filters, (L) and (R) to change filters": "(A)或(B)使用筛选,(L)和(R)切换筛选",
-    "(A) to apply filters": "(A)使用筛选",
-    "Advance": "前进",
-    "Calculating seed": "计算seed",
-    "Raid Search Settings": "团体战检索设置"
-  },
+  "app": {},
   "natures": {
     "Hardy": "勤奋",
     "Lonely": "怕寂寞",
