--- a/CaptureSight-Applet/romfs/i18n/cht.json
+++ b/CaptureSight-Applet/romfs/i18n/cht.json
@@ -1,60 +1,5 @@
 {
-  "app": {
-    "PSV": "PSV",
-    "TSV": "TSV",
-    "PID": "PID",
-    "EC": "加密常數",
-    "Shiny": "異色",
-    "Not Shiny": "非異色",
-    "Nature": "性格",
-    "Wild Pokemon": "野生寶可夢",
-    "Box Pokemon": "盒子寶可夢",
-    "Party Pokemon": "同行寶可夢",
-    "Raid Pokemon": "團體戰寶可夢",
-    "Box": "盒子",
-    "Slot": "位置",
-    "Party": "同行",
-    "Active Den List": "有光柱坑列表",
-    "All Dens List": "所有坑列表",
-    "Stars": "星數",
-    "More detail (X)": "更多資訊 (按X)",
-    "Raid Searcher (Y)": "查看seed (按Y)",
-    "Den Id": "坑ID",
-    "Wild and Trade Pokemon": "野生與交換中寶可夢",
-    "Trade Pokemon": "交換中寶可夢",
-    "Minted Nature": "薄荷性格",
-    "IVs": "個體值",
-    "EVs": "努力值",
-    "Atmosphere's dmnt:cht is not running": "大氣層 dmnt:chts 未運行",
-    "Please start a Pokemon game before running CaptureSight": "請在使用CaptureSight前運行游戏",
-    "Friendship": "親密度",
-    "Egg cycles": "孵化圈數",
-    "Frame": "幀",
-    "No raid seed found!  This may not be a raid Pokemon": "沒有找到亂數seed! 該寶可夢不是團體戰獲得",
-    "Flawless IVs": "完美個體",
-    "View upcoming frames (A)": "查看後續幀 (按A)",
-    "Ability": "特性",
-    "Empty": "無",
-    "Event": "活动",
-    "HP": "HP",
-    "ATK": "攻擊",
-    "DEF": "防禦",
-    "SPA": "特攻",
-    "SPD": "特防",
-    "SPE": "速度",
-    "Switch (A)": "切換(A)",
-    "Hide detail (X)": "隱藏詳細(X)",
-    "Shiny filter": "篩選異色",
-    "Flawless IV filter": "篩選完美個體",
-    "Star": "星星",
-    "Square": "方塊",
-    "Star or square": "星或方塊",
-    "(A) or (B) to apply filters, (L) and (R) to change filters": "(A)或(B)使用篩選,(L)和(R)切換篩選",
-    "(A) to apply filters": "(A)使用篩選",
-    "Advance": "前進",
-    "Calculating seed": "計算seed",
-    "Raid Search Settings": "團體戰檢索設置"
-  },
+  "app": {},
   "natures": {
     "Hardy": "勤奮",
     "Lonely": "怕寂寞",
