--- a/CaptureSight-Applet/romfs/i18n/de.json
+++ b/CaptureSight-Applet/romfs/i18n/de.json
@@ -1,71 +1,5 @@
 {
-  "app": {
-    "PSV": "PSV",
-    "TSV": "TSV",
-    "PID": "PID",
-    "EC": "EC",
-    "Shiny": "Schillernd",
-    "Not Shiny": "Nicht-Schillernd",
-    "Nature": "Wesen",
-    "Wild Pokemon": "Wildes Pokémon",
-    "Box Pokemon": "Box Pokémon",
-    "Party Pokemon": "Party Pokémon",
-    "Raid Pokemon": "Raid Pokémon",
-    "Box": "PC-Box",
-    "Slot": "Platz",
-    "Party": "Party",
-    "Active Den List": "Liste der aktiven Pokémon-Nester",
-    "All Dens List": "Liste aller Pokémon-Nester",
-    "Stars": "Sterne",
-    "More detail (X)": "Mehr Details(X)",
-    "Raid Searcher (Y)": "Raid Sucher (Y)",
-    "Den Id": "Pokémon-Nest ID",
-    "Wild and Trade Pokemon": "Wilde und getausche Pokémon",
-    "Trade Pokemon": "Getauschte Pokémon",
-    "Minted Nature": "Minz-Wesen",
-    "IVs": "DVs",
-    "EVs": "EVs",
-    "Atmosphere's dmnt:cht is not running": "Atmosphere Service dmnt:chts läuft nicht",
-    "Please start a Pokemon game before running CaptureSight": "Bitte starte ein Pokémon Spiel um CaptureSight zu starten",
-    "Friendship": "Freundschaft",
-    "Egg cycles": "Ei-Zyklen",
-    "Frame": "Frame",
-    "No raid seed found!  This may not be a raid Pokemon": "Kein Raid-Seed gefunden! Es könnte sich um kein Raid-Pokémon handeln.",
-    "Flawless IVs": "Perfekte DVs",
-    "Ability": "Fähigkeit",
-    "Empty": "Leer",
-    "Event": "Event",
-    "HP": "HP",
-    "ATK": "ANG",
-    "DEF": "VER",
-    "SPA": "SPA",
-    "SPD": "SPV",
-    "SPE": "INIT",
-    "Switch (A)": "Wechsel (A)",
-    "Hide detail (X)": "Details verstecken (X)",
-    "Shiny filter": "Shiny Filter",
-    "Flawless IV filter": "Perfekte DV Filter",
-    "Star": "Stern",
-    "Square": "Quadrat",
-    "Star or square": "Stern oder Quadrat",
-    "(A) or (B) to apply filters, (L) and (R) to change filters": "(A) oder (B) um Filter zu übernehmen, (L) und (R) um Filter zu ändern",
-    "(A) to apply filters": "(A) um Filter anzuwenden",
-    "Advance": "Voranschreiten",
-    "Calculating seed": "Seed Berechnen",
-    "Raid Search Settings": "Raid-Sucher Einstellungen",
-    "View upcoming advances (A), View type matches (Y)": "Siehe folgende Frames (A), Siehe deine Treffer (Y)",
-    "View details (A), View type matches (Y)": "Details (A), Siehe Typ-Treffer (Y)",
-    "Weaknesses": "Schwächen",
-    "Resistances": "Resistenzen",
-    "No Filter": "Kein Filter",
-    "None": "Nichts",
-    "Regular Den": "Normales Nest",
-    "Rare Den": "Seltenes Nest",
-    "Den Id filter": "Nest-ID-Filter",
-    "Spawn filter": "Begegnungs-Filter",
-    "Ability Filter": "Fähigkeiten-Filter",
-    "Any": "Jede Fähigkeit"
-  },
+  "app": {},
   "natures": {
     "Hardy": "Robust",
     "Lonely": "Solo",
